--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,8 @@ $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
 
+$background-moredark: #4527A0;
+
 @mixin zero-margin($pad-up-down, $pad-left-right) {
   margin: 0px auto;
   padding: $pad-up-down $pad-left-right;
@@ -44,4 +46,8 @@ $divider-color:        #BDBDBD;
 
 .flex-spacer {
   flex: 1 1 auto;
+}
+
+.active {
+  background: $background-moredark;
 }
