Single Page Applications Part 2

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,10 +13,10 @@
       <div fxFlex="40" fxFlexOffset="20px">
         <h4>Links</h4>
         <md-list>
-          <md-list-item><a md-button>Home</a></md-list-item>
+          <md-list-item><a md-button hyperLink="/home">Home</a></md-list-item>
           <md-list-item><a md-button>About</a></md-list-item>
-          <md-list-item><a md-button>Menu</a></md-list-item>
-          <md-list-item><a md-button>Contact</a></md-list-item>
+          <md-list-item><a md-button hyperLink="/menu">Menu</a></md-list-item>
+          <md-list-item><a md-button hyperLink="/contactus">Contact</a></md-list-item>
         </md-list>
       </div>
       <div fxFlex="50">
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  
+
   <div fxFlex="100%" fxFlex.gt-sm="45%">
     <div style="text-align:center">
       <a md-icon-button class="btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
