--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
         <h4>Links</h4>
         <md-list>
           <md-list-item><a md-button hyperLink="/home">Home</a></md-list-item>
-          <md-list-item><a md-button>About</a></md-list-item>
+          <md-list-item><a md-button hyperLink="/aboutus">About</a></md-list-item>
           <md-list-item><a md-button hyperLink="/menu">Menu</a></md-list-item>
           <md-list-item><a md-button hyperLink="/contactus">Contact</a></md-list-item>
         </md-list>
