--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px">
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
+  fxLayoutGap="10px">
 
   <md-card *ngIf="dish" fxFlex>
     <md-card-header>
@@ -10,6 +11,20 @@
     <img md-card-image src={{dish.image}} alt={{dish.name}}>
     <md-card-content>
       <p>{{dish.description}}
+      </p>
+    </md-card-content>
+  </md-card>
+
+  <md-card *ngIf="leader" fxFlex>
+    <md-card-header>
+      <div md-card-avatar></div>
+      <md-card-title>
+        <h3>{{leader.name | uppercase}}</h3>
+      </md-card-title>
+    </md-card-header>
+    <img md-card-image src={{leader.image}} alt={{leader.name}}>
+    <md-card-content>
+      <p>{{leader.description}}
       </p>
     </md-card-content>
   </md-card>
