--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,4 @@
-<div class="container"
-  fxLayout="column"
-  fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
 
   <div fxFlex>
     <div>
@@ -9,7 +7,7 @@
     </div>
   </div>
 
-  <div fxFlex> 
+  <div fxFlex *ngIf="dishes">
     <md-grid-list cols="2" rowHeight="200px">
       <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
@@ -18,6 +16,10 @@
         </md-grid-tile-footer>
       </md-grid-tile>
     </md-grid-list>
+  </div>
+  <div [hidden]="dishes">
+    <md-spinner></md-spinner>
+    <h4>Loading . . . Please Wait</h4>
   </div>
 
 </div>
