--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -26,8 +26,8 @@
     </md-card>
   </div>
 
-  <div fxFlex="40" *ngIf="dish && dish.comments">
-    <md-list>
+  <div fxFlex="40" *ngIf="dish">
+    <md-list *ngIf="dish.comments">
       <h3>Comments</h3>
       <md-list-item *ngFor="let comment of dish.comments" style="height:100px">
         <div fxLayout="column" fxLayoutGap="10px">
@@ -37,10 +37,36 @@
         </div>
       </md-list-item>
     </md-list>
+    <div>
+      <p>{{ commentForm.value | json }}</p>
+      <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+        <p>
+          <md-input-container class="full-width" dividerColor="{{(formErrors.author) ? 'warn' : 'primary'}}">
+            <input mdInput formControlName="author" placeholder="Name" type="text" required>
+            <md-hint>
+              <span [hidden]="!(formErrors.author)">{{formErrors.author}}</span>
+            </md-hint>
+          </md-input-container>
+        </p>
+        <p>
+          <md-slider thumbLabel min="1" max="5" step="1" formControlName="rating"></md-slider>
+        </p>
+        <p>
+          <md-input-container class="full-width" dividerColor="{{(formErrors.comment) ? 'warn' : 'primary'}}">
+            <textarea mdInput formControlName="comment" placeholder="Your Comment" rows=3></textarea>
+            <md-hint>
+              <span [hidden]="!(formErrors.comment)">{{formErrors.comment}}</span>
+            </md-hint>
+          </md-input-container>
+        </p>
+        <button type="submit" md-button class="background-primary text-floral-white">
+          Submit
+        </button>
+      </form>
+    </div>
   </div>
   <div [hidden]="dish">
     <md-spinner></md-spinner>
     <h4>Loading . . . Please Wait</h4>
   </div>
-
 </div>
