--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,10 +14,14 @@
       </p>
     </md-card-content>
   </md-card>
-  <div [hidden]="dish">
+  <div [hidden]="dish || errMsg">
     <md-spinner></md-spinner>
     <h4>Loading . . . Please Wait</h4>
   </div>
+  <div *ngIf="errMsg">
+      <h2>Error</h2>
+      <h4>{{errMsg}}</h4>
+    </div>
 
   <md-card *ngIf="leader" fxFlex>
     <md-card-header>
