--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -53,7 +53,7 @@
     </md-card>
   </div>
 
-  <md-list fxFlex *ngIf="leaders">
+  <md-list fxFlex *ngIf="leaders" [@expand]="expand">
     <h2>Corporate Leadership</h2>
     <md-list-item *ngFor="let leader of leaders">
       <img md-list-avatar src="{{leader.image}}" alt="{{leader.name}}" />
