--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,14 +56,18 @@
   <md-list fxFlex *ngIf="leaders" [@expand]="expand">
     <h2>Corporate Leadership</h2>
     <md-list-item *ngFor="let leader of leaders">
-      <img md-list-avatar src="{{leader.image}}" alt="{{leader.name}}" />
+      <img md-list-avatar src="{{BaseURL + leader.image}}" alt="{{leader.name}}" />
       <h1 md-line><strong>{{leader.name}}</strong></h1>
       <p style="white-space: normal" md-line>{{leader.description}}</p>
     </md-list-item>
   </md-list>
-  <div [hidden]="leaders">
+  <div [hidden]="leaders || errMsg">
     <md-spinner></md-spinner>
     <h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="errMsg">
+    <h2>Error</h2>
+    <h4>{{errMsg}}</h4>
   </div>
 
 </div>
