--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,9 +19,9 @@
     <h4>Loading . . . Please Wait</h4>
   </div>
   <div *ngIf="errMsg">
-      <h2>Error</h2>
-      <h4>{{errMsg}}</h4>
-    </div>
+    <h2>Error</h2>
+    <h4>{{errMsg}}</h4>
+  </div>
 
   <md-card *ngIf="leader" fxFlex [@expand]="expand">
     <md-card-header>
@@ -30,15 +30,19 @@
         <h3>{{leader.name | uppercase}}</h3>
       </md-card-title>
     </md-card-header>
-    <img md-card-image src={{leader.image}} alt={{leader.name}}>
+    <img md-card-image src="{{BaseURL + leader.image}}" alt={{leader.name}}>
     <md-card-content>
       <p>{{leader.description}}
       </p>
     </md-card-content>
   </md-card>
-  <div [hidden]="leader">
+  <div [hidden]="leader || errMsgLeader">
     <md-spinner></md-spinner>
     <h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="errMsgLeader">
+    <h2>Error</h2>
+    <h4>{{errMsgLeader}}</h4>
   </div>
 
   <md-card *ngIf="promotion" fxFlex [@expand]="expand">
@@ -48,15 +52,19 @@
         <h3>{{promotion.name | uppercase}}</h3>
       </md-card-title>
     </md-card-header>
-    <img md-card-image src={{promotion.image}} alt={{promotion.name}}>
+    <img md-card-image src="{{BaseURL + promotion.image}}" alt={{promotion.name}}>
     <md-card-content>
       <p>{{promotion.description}}
       </p>
     </md-card-content>
   </md-card>
-  <div [hidden]="promotion">
+  <div [hidden]="promotion || errMsgPromo">
     <md-spinner></md-spinner>
     <h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="errMsgPromo">
+    <h2>Error</h2>
+    <h4>{{errMsgPromo}}</h4>
   </div>
 
 </div>
