--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -34,9 +34,9 @@
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
+    <p *ngIf="feedbackForm.valid && !feedback">{{ feedbackForm.value | json }}, {{ feedbackForm.status|json }}</p>
 
-    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" *ngIf="!feedback && !submitFeedback">
       <p>
         <md-input-container class="half-width" dividerColor="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
@@ -82,7 +82,13 @@
           <textarea mdInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
         </md-input-container>
       </p>
-      <button type="submit" md-button class="background-primary text-floral-white">Submit</button>
+      <button type="submit" md-button class="background-primary text-floral-white" [disabled]="!feedbackForm.valid">Submit</button>
     </form>
+    <div *ngIf="!!feedback && !submitFeedback">
+      <md-spinner></md-spinner>
+    </div>
+    <div *ngIf="!!submitFeedback">
+      {{submitFeedback | json}}
+    </div>
   </div>
 </div>
