Added login logic to display other components

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
 
   <div fxFlex="100%" fxFlex.gt-sm="50%">
     <div fxLayout="row">
-      <div fxFlex="40" fxFlexOffset="20px">
+      <div fxFlex="40" fxFlexOffset="20px" *ngIf="isLoggedIn">
         <h4>Links</h4>
         <md-list>
           <md-list-item><a md-button hyperLink="/home">Home</a></md-list-item>
