fixed angular material version; login variable error

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
     <span class="fa fa-address-card fa-lg"></span> Contact</a>
   <span class="flex-spacer"></span>
   <a md-button (click)="openLoginForm()">
-    <span class="fa fa-sign-in fa-lg" *ngIf="!!logIn"></span> {{logIn}}
-    <span class="fa fa-sign-out fa-lg" *ngIf="!logIn"></span>
+    <span class="fa fa-sign-in fa-lg" *ngIf="!!logIn"></span>
+    <span class="fa fa-sign-out fa-lg" *ngIf="!logIn"></span> {{logInString}}
   </a>
 </md-toolbar>
 
